Build: Add store to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": "./",
     "paths": {
       "@components/*": ["components/*"],
-      "@styles/*": ["styles/*"]
+      "@styles/*": ["styles/*"],
+      "@store/*": ["store/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "__tests__/index.test.js"],
