--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@prisma/client": "4.4.0",
     "@reduxjs/toolkit": "^1.8.5",
     "chart.js": "^3.9.1",
     "next": "12.2.5",
@@ -33,6 +34,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "prisma": "4.4.0",
     "typescript": "4.7.4"
   }
 }
