--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@components/*": ["components/*"],
       "@styles/*": ["styles/*"],
-      "@store/*": ["store/*"]
+      "@store/*": ["store/*"],
+      "@db/*": ["db/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "__tests__/index.test.js"],
