--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "4.4.0",
     "@reduxjs/toolkit": "^1.8.5",
     "chart.js": "^3.9.1",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
