--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.2"
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.17.1",
