--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@prisma/client": "4.4.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.5.0",
     "@reduxjs/toolkit": "^1.8.5",
     "chart.js": "^3.9.1",
     "moment": "^2.29.4",
     "next": "12.2.5",
+    "next-auth": "^4.14.0",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
@@ -37,7 +40,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "prisma": "4.4.0",
+    "prisma": "^4.5.0",
     "typescript": "4.7.4"
   }
 }
