--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^4.5.0",
     "@reduxjs/toolkit": "^1.8.5",
     "chart.js": "^3.9.1",
+    "email-validator": "^2.0.4",
     "moment": "^2.29.4",
     "next": "12.2.5",
     "next-auth": "^4.14.0",
