--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^28.1.8",
     "@types/node": "18.7.13",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "babel-jest": "^28.1.3",
