--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
+    "react-event-viewer-calendar": "^1.0.1",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
