--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.14.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-event-viewer-calendar": "^1.0.1",
