--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@reduxjs/toolkit": "^1.8.5",
     "chart.js": "^3.9.1",
     "email-validator": "^2.0.4",
+    "immutability-helper": "^3.1.1",
     "moment": "^2.29.4",
     "next": "12.2.5",
     "next-auth": "^4.14.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^4.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-event-viewer-calendar": "^1.0.1",
     "react-icons": "^4.4.0",
@@ -39,6 +41,7 @@
     "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^9.0.0",
     "babel-jest": "^28.1.3",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
