--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "msw": "^0.49.2",
     "prisma": "^4.5.0",
     "typescript": "4.7.4"
   }
