--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
     "@types/uuid": "^9.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "babel-jest": "^29.7.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
