--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "chart.js": "^4.4.0",
     "email-validator": "^2.0.4",
+    "framer-motion": "^10.16.4",
     "immutability-helper": "^3.1.1",
     "moment": "^2.29.4",
     "next": "14.0.1",
@@ -51,6 +52,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.0.2",
     "prisma": "^5.5.2",
+    "tailwindcss": "^3.3.5",
     "typescript": "5.2.2"
   }
 }
