--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
@@ -51,6 +52,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.0.2",
+    "postcss": "^8.4.31",
     "prisma": "^5.5.2",
     "tailwindcss": "^3.3.5",
     "typescript": "5.2.2"
