--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "chart.js": "^4.4.0",
     "email-validator": "^2.0.4",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "immutability-helper": "^3.1.1",
     "moment": "^2.29.4",
@@ -29,7 +30,8 @@
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
