--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
+    "cookies-next": "^4.0.0",
     "email-validator": "^2.0.4",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "immutability-helper": "^3.1.1",
+    "jose": "^5.1.0",
     "moment": "^2.29.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
@@ -31,6 +34,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.3",
     "swr": "^2.2.4",
+    "validator": "^13.11.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -38,12 +42,14 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.7",
     "@types/node": "20.8.10",
     "@types/nodemailer": "^6.4.13",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
     "@types/uuid": "^9.0.6",
+    "@types/validator": "^13.11.5",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "autoprefixer": "^10.4.16",
