--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
     "cookies-next": "^4.0.0",
@@ -22,6 +23,7 @@
     "framer-motion": "^10.16.4",
     "immutability-helper": "^3.1.1",
     "jose": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
@@ -44,6 +46,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.7",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "20.8.10",
     "@types/nodemailer": "^6.4.13",
     "@types/react": "18.2.34",
