--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
@@ -26,7 +25,6 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "next": "14.0.1",
-    "next-auth": "^4.24.4",
     "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -45,6 +43,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/chart.js": "^2.9.41",
     "@types/jest": "^29.5.7",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "20.8.10",
